--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,16 @@
       <artifactId>jgrapht-io</artifactId>
       <version>1.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>4.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
   </dependencies>
 
   <build>
